@@ -16,7 +16,7 @@
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>13</java.version>
 		<templateRootDir>${basedir}/mbg-templates/</templateRootDir>
 		<!--  XML生成路径  -->
 		<targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
@@ -41,7 +41,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.2.4.RELEASE</version>
+				<version>2.3.2.RELEASE</version>
 				<executions>
 					<execution>
 						<goals>
@@ -68,18 +68,18 @@
 				<version>3.8.1</version>
 				<!-- 编译JDK版本 -->
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>13</source>
+					<target>13</target>
 					<encoding>UTF-8</encoding>
 					<parameters>true</parameters>
 <!--					<compilerArgument>-proc:none</compilerArgument>-->
-<!--					<compilerArgs>-->
-<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
-<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
-<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
-<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
-<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
-<!--					</compilerArgs>-->
+					<compilerArgs>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -109,13 +109,6 @@
 			<version>4.1</version>
 		</dependency>
 
-		<!-- 利刃框架引入 -->
-		<dependency>
-			<groupId>com.dili</groupId>
-			<artifactId>ss-scheduler</artifactId>
-			<version>${sharp-sword.version}</version>
-		</dependency>
-
 		<!-- if you enable json support in spring mvc. -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -123,15 +116,13 @@
 			<version>1.9.13</version>
 		</dependency>
 
-
-		<!-- =============== spring boot starters =============== -->
+		<!-- 利刃框架引入 -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>com.dili</groupId>
+			<artifactId>ss-scheduler</artifactId>
+			<version>${sharp-sword.version}</version>
 		</dependency>
 
-		<!-- 内部包 -->
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>uap-sdk</artifactId>
@@ -158,7 +149,7 @@
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-			<version>2.2.3.RELEASE</version>
+			<version>2.2.0.RELEASE</version>
 		</dependency>
 	</dependencies>
 
